Ajuste na documentação Wallet
